# de-streaming-data-project

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: fetch.py  main.py  send_to_sqs.py
test/: fixtures.py  test-fetch.py  test-main.py  test-send_to_sqs.py  test_fetch.py  test_send_to_sqs.py
