[project]
name = "de-streaming-project"
requires-python = ">=3.10"
version = "2025.01.23"
dependencies = [
  "boto3==1.35.81",
  "requests==2.32.3"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8.0",
  "black>=24.10.0",
  "flake8>=7.1.1",
  "moto==5.0.22",
  "pytest==8.3.4",
  "pip-audit>=2.7.3"
]